--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
             <artifactId>glassfish-jstl</artifactId>
             <version>11.0.18</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
